--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "async": "^2.6.0",
     "debug": "^3.1.0",
     "pull-abortable": "^4.1.1",
-    "pull-mplex": "libp2p/pull-mplex.git#feat\/pull-mplex",
+    "pull-mplex": "libp2p/pull-mplex.git#feat/pull-mplex-4",
     "pull-stream": "^3.6.7"
   },
   "contributors": [
